# systheme

./: CMakeLists.txt  README.md  TODO  cp.sh  main.cpp  systheme-completion.bash  systheme.drawio
include/nlohmann/: json.hpp
include/nlohmann/detail/: exceptions.hpp  json_pointer.hpp
include/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp
include/nlohmann/detail/output/: serializer.hpp
src/: classes.cpp  classes.hpp  engine.cpp  engine.h  exceptions.hpp  helpers.hpp  interface.cpp  interface.h  lineparser.cpp  lineparser.h  main.cpp  oldshit  opts.cpp  opts.h  symbolmap.cpp  symbolmap.h  symbolnode.cpp  symbolnode.h  symbols.cpp  symbols.h  systheme.cpp  templateheader.cpp  templateheader.h  templateheaderinfo.cpp  templateheaderinfo.h  templateparser.cpp  templateparser.h  tests.cpp  user.cpp  user.h
src/driver/: Config.cpp  Driver.cpp  Driver.h  Program.cpp  Program.h  Theme.cpp  Theme.h  driver.cpp  driver.h
src/gui/: Menu.cpp  Menu.h  Page.cpp  Page.h  Ui.cpp  Ui.h  WObj.cpp  WObj.h  WPage.cpp  WPage.h  WPane.cpp  WPane.h  WindowObj.cpp  WindowObj.h  WindowPage.cpp  WindowPage.h  WindowPane.cpp  WindowPane.h  ui.h
src/helper/: vec_sort.h
src/tpc/: Config.h  Program.cpp  Program.h  Theme.cpp  Theme.h
src/utils/: GLOBALS.h  exceptions.h  helpers.h  mrworldwide.h  opts.cpp  opts.h  tokenizer.cpp  tokenizer.h  user.cpp  user.h  verbosityhandler.cpp  verbosityhandler.h
tests/: tests.cpp
